--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
 								<article>
 									<header>
 										<span class="date">May 23, 2020</span>
-										<h2><a href="#">Chowringhee<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Chowringhee</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="Chowringhee" /></a>
 									<p>  One of the must do things in Kolkata is definitely visit Chowringhee which is known as a great place for shopping and other recreational activities. Officially termed as the Jawaharlal Nehru Road, Chowringhee is a crowd-pleaser amidst locals and tourists alike.
